<resources>
    <string name="app_name" translatable="false">LearnKotlin</string>
    <string name="action_settings">Ayarlar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home Fragment</string>
    <string name="second_fragment_label">Education Fragment</string>
    <string name="next">Sırdaki</string>
    <string name="previous">Önceki</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_text">Kuraldışı Akademi\'ye hoş geldiniz…</string>
    <string name="kuraldisi_text">Kuraldışı</string>
    <string name="educations">Eğitimler</string>
    <string name="book">Kitap</string>
    <string name="magazine">dergi</string>
    <string name="education_calendar">Eğitim Takvimi</string>
    <string name="face_to_face_educations">Yüz Yüze Eğitimler</string>
    <string name="online_educations">Online Eğitimler</string>
    <string name="Consulting">Danışmanlıklar</string>
    <string name="packages">Paketler</string>
    <string name="exhibitor_feedback">Katılımcı Görüşleri</string>
    <string name="instructors_consultants">Eğitmenler/Danışmanlar</string>
    <string name="education_explanation_text">Başkaları size, üzülmenize ya da kırılmanıza neden olacak şekilde davranıyor mu? Uyarmanıza rağmen sık sık hoşlanmadığınız davranışlara muhatap oluyor musunuz? Emin olun, bunu onlara öğrettiğiniz için size böyle davranıyorlar.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="consulting_text">Danışman: Deniz Asal \n\n Koçluk hizmetleri yüz yüze ya da online olarak verilmektedir.\n\n Ayrıntılı bilgi için:\n\n Tel : 0216 449 98 05 (pbx)\n GSM: 0532 205 55 71\n Mail: kuraldisi@kuraldisi.com\n\n Özel hayatınızda, aile hayatınızda, iş hayatınızda daha başarılı ve anlaşılır olmak istiyorsanız,\n\n Kendinizi daha iyi anlatmak ve karşınızdakini daha iyi anlamak istiyorsanız,\n\n Hayatınızın kendi kontrolünüzden çıktığını düşünüyor, aldığınız kararlar nedeniyle kendinizi başarısız olarak nitelendiriyorsanız,\n\n Hayatınızda denge, huzur, mutluluk arıyor ve hayal ettiğiniz hayatı yaşayamadığınızı düşünüyorsanız, bu hizmetten yararlanabilirsiniz.\n\n Yaşamın tüm alanlarında denge ve ahenk içinde olmak başarı için önemlidir. Bu açıdan bireysel koçluk/danışmanlık çalışmaları tüm alanlarda gerçekleştirilir. Birey iş ya da özel yaşamında, bireysel gelişiminde, ilişkilerinde koçluk/ danışmanlık çalışmaları ile farklı bakış açıları geliştirir, vizyonunu genişletir, daha esnek olmayı deneyimler ve yeniliklere uyum sağlama becerisini geliştirir. Engellerin üstesinden gelir ve karşısına çıkan fırsatların farkına varır.\n\n U Y A R I\n\n Kuraldışı Akademi tarafından düzenlenen etkinlikler, workshoplar, seminerler ya da danışmanlık hizmetleri yalnızca bireysel gelişim yolculuğunuzda sizleri bilgilendirmek, potansiyelinizi açığa çıkartmak, kendinize ve çevrenize daha yararlı bir birey olmanıza aracılık etmek; özetle hayatınızın kalitesini artırmak amaçlıdır. Hiçbir etkinlik, workshop, seminer ya da danışmanlık hizmeti bir hastalık tanısı koyma ve tedavi etme amacı taşımaz.</string>
    <string name="package_text">Kuraldışı size kendinizi kazandırır. \n\n KURALDIŞI AKADEMİ PAKETİ’NDE YER ALAN EĞİTİMLER:\n\n Etkisel İletişim (4 Gün)\n Doyumlu İlişkiler (4 Gün)\n NLP (4 Gün)\n Özsaygı (4 Gün)\n Amaç Belirlemek ve İnisiyatif Alabilmek (4 Gün)\n Yüzleş Kucaklaş Özgürleş (4 Gün)\n Gölgelerden Aydınlığa (4 Gün)\n Zihinsel Denge – PiKi (4 Gün)\n Duygusal Denge – PiKi (4 Gün)\n Ruhsal Denge – PiKi (4 Gün)\n Bilinçaltı Formatlama Uygulamaları – PİKİ (4 Gün)\n Derin Affediş (4 Gün)\n Meridyen Terapisi – PiKi (4 gün)\n\n\n EĞİTMENLER: Nil Gün, Saim Koç\n SÜRE: 52 gün\n EĞİTİMLERİN TOPLAM FİYATI: 98.800 TL + KDV\n PAKET FİYATI % 25 İNDİRİM: 74.100 TL + KDV\n\n Eğitim günleri için lütfen takvimi inceleyiniz.\n Eğitimlerimizi paket olarak almanız halinde paket fiyatı üzerinden % 25 indirim, ayrıca World, Bonus ve Maksimum karta 12 ay taksit, Finansbank ve HSBC kredi kartlarına 6 ay taksit imkânından yararlanırsınız.\n Daha fazla bilgi için: (Hafta içi 09:00 – 18:00 arasında)\n Tel : 0216 449 98 05 (pbx)\n GSM: 0532 205 55 71\n Mail: kuraldisi@kuraldisi.com\n Banka Bilgileri:\n Kuraldışı Yayıncılık Eğitim Danışmanlık Ltd. Şti.\n Garanti Bankası Rıhtım Kadıköy Şb.\n Iban: TR36 0006 2000 4430 0006 2003 29\n Hesap No:443/6200329</string>

</resources>