<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/top_bar" />

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:iss_auto_cycle="true"
                app:iss_delay="0"
                app:iss_error_image="@drawable/error"
                app:iss_period="1000"
                android:layout_marginTop="60dp"
                app:iss_placeholder="@drawable/placeholder"
                app:iss_selected_dot="@drawable/default_selected_dot"
                app:iss_unselected_dot="@drawable/default_unselected_dot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/welcomeTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/dr_kuraldisi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_slider"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:orientation="vertical"
                        android:background="@drawable/education_box" >

                        <ImageView
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:background="@drawable/ic_calendar"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="@string/education_calendar"
                            android:textColor="@color/dark_blue"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:orientation="vertical"
                        android:background="@drawable/education_box">

                        <ImageView
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:background="@drawable/ic_books"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="@string/face_to_face_educations"
                            android:textColor="@color/dark_blue"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:orientation="vertical"
                        android:background="@drawable/education_box" >

                        <ImageView
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:background="@drawable/ic_online_education"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="@string/online_educations"
                            android:textColor="@color/dark_blue"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:orientation="vertical"
                        android:background="@drawable/education_box">

                        <ImageView
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:background="@drawable/ic_psychology_counseling"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="@string/Consulting"
                            android:textColor="@color/dark_blue"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:orientation="vertical"
                        android:background="@drawable/education_box" >

                        <ImageView
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:background="@drawable/ic_packages"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="@string/packages"
                            android:textColor="@color/dark_blue"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:orientation="vertical"
                        android:background="@drawable/education_box">

                        <ImageView
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:background="@drawable/ic_feedback"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="@string/exhibitor_feedback"
                            android:textColor="@color/dark_blue"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:orientation="vertical"
                        android:background="@drawable/education_box"
                        tools:ignore="UselessParent">

                        <ImageView
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:background="@drawable/ic_teachers"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="@string/instructors_consultants"
                            android:textColor="@color/dark_blue"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
